<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KYAAMI</string>
    <string name="action_settings">Settings</string>
    <string name="Genre">Genre</string>
    <string name="music">MUSIC</string>
    <string name="menue">HOME PAGE</string>
    <string name="events">EVENTS</string>
    <string name="merchandise">MERCHANDISE</string>
    <string name="radio">RADIO</string>
    <string name="literature">LITERATURE</string>
    <string name="title_activity_music_a">Music</string>
    <string name="title_activity_events_a">Events</string>
    <string name="title_activity_literature_a">Literature</string>
    <string name="title_activity_merchandise_a">Merchandise</string>
    <string name="title_activity_radio_a">Radio</string>
    <string name="title_activity_songs">Songs</string>
    <string name="title_activity_albums">Albums</string>
    <string name="title_activity_artists">Artists</string>
    <string name="songs">SONGS</string>
    <string name="albums">ALBUMS</string>
    <string name="artists">ARTISTS</string>
    <string name="preferences">Preferences</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_genre">GenreActivity</string>

</resources>
